<resources>
    <string name="app_name">安卓工具测试</string>
    <string name="page_type_custom_image_view">图片控件</string>
    <string name="page_type_glide_image_loading">glide图片加载</string>
    <string name="page_type_brightness">屏幕亮度调节</string>
    <string name="page_type_file_scan">文件扫描</string>
    <string name="page_type_custom_view_sidebar">SideBar</string>
    <string name="page_type_horizontal_slip_tab">水平切换tab</string>
    <string name="page_type_custom_view_tab_layout">TabLayout</string>
    <string name="page_type_custom_view_switch_buttom">切换按钮</string>
    <string name="page_type_custom_view_smart_refresh_layout">SmartRefreshLayout</string>
    <string name="page_type_file_options">文件操作按钮</string>
    <string name="page_type_toast">吐司Toast页面</string>
    <string name="page_type_data_parse">数据格式化页面</string>
    <string name="page_type_mobile_contancts">手机联系人操作</string>
    <string name="page_type_mobile_sms">获取Sms</string>
    <string name="page_type_graphic_code_scan">图形码扫描</string>
    <string name="page_type_custom_view_recycle_viewpager">RecycleviewViewPager</string>
    <string name="page_type_custom_view_show_price_text">金额文本显示</string>
    <string name="page_type_custom_view_show_quantity_of_commodity">数量变化修改组件</string>
    <string name="page_type_custom_view_banner">Banner列表</string>
    <string name="page_type_custom_view_viewpager_2">ViewPager2嵌套ViewPager2</string>
    <string name="page_type_custom_view_dialog">弹窗相关</string>
    <string name="page_type_anims">动画相关</string>
    <string name="anim_translate_y">Y轴平移动画</string>
    <string name="anim_translate_x">X轴平移动画</string>
    <string name="anim_translate_xy">XY轴同时平移动画</string>
    <string name="anim_scale_y">Y轴缩放动画</string>
    <string name="anim_scale_x">X轴缩放动画</string>
    <string name="anim_scale_xy">XY轴同时缩放动画</string>
    <string name="anim_rotate_from">From旋转动画</string>
    <string name="anim_rotate">旋转动画</string>
    <string name="anim_alpha">透明动画</string>
    <string name="anim_translate_y_obj">Y轴平移属性动画</string>
    <string name="anim_translate_x_obj">X轴平移属性动画</string>
    <string name="anim_translate_xy_obj">XY轴同时平移属性动画</string>
    <string name="anim_scale_y_obj">Y轴缩放属性动画</string>
    <string name="anim_scale_x_obj">X轴缩放属性动画</string>
    <string name="anim_scale_xy_obj">XY轴同时缩放属性动画</string>
    <string name="anim_rotate_x_obj">X旋转属性动画</string>
    <string name="anim_rotate_y_obj">Y旋转属性动画</string>
    <string name="anim_rotate_obj">旋转属性动画</string>
    <string name="anim_alpha_obj">透明属性动画</string>
    <string name="page_type_bluetooth">蓝牙相关页面</string>
</resources>
